# gmtw-hria

./: .gitignore  LICENSE  README.md  RESULTS_SUMMARY.md  USAGE.md  commands.txt  detailed_metrics.jsonl  dummy_outputs.jsonl  dummy_v2.jsonl  gemma_local_eval.jsonl  groq_20b.jsonl  groq_70b_en.jsonl  groq_70b_outputs.jsonl  groq_70b_ro.jsonl  groq_8b_outputs.jsonl  groq_outputs.jsonl  groq_v2.jsonl  llama32_3b_outputs.jsonl  metrics_debug.jsonl  mistral_local_eval.jsonl  pyproject.toml  run_all.sh  test.jsonl  test_v2.jsonl
data/: fresh_500.jsonl  gmtw_ro_hard.jsonl  gmtw_ro_v0.jsonl  hard_200.jsonl  instances_v0.jsonl  metrics_70b_en.jsonl  metrics_base_gpt-oss-20b.jsonl  metrics_cerebras_llama31_8b.jsonl  metrics_cerebras_llama31_8b_hard.jsonl  metrics_hard_gpt-oss-20b.jsonl  metrics_llama4scout_ro.jsonl  metrics_llama70b_v2.jsonl  metrics_llama8b.jsonl  outputs_70b_en.jsonl  outputs_8b.jsonl  outputs_base_gpt-oss-120b.jsonl  outputs_base_gpt-oss-120b_failed.txt  outputs_base_gpt-oss-20b.jsonl  outputs_base_gpt-oss-20b_failed.txt  outputs_cerebras_llama31_8b.jsonl  outputs_gpt-oss-20b.jsonl  outputs_gpt-oss-20b_hard200.jsonl  outputs_hard_gpt-oss-120b.jsonl  outputs_hard_gpt-oss-120b_failed.txt  outputs_hard_gpt-oss-20b.jsonl  outputs_hard_gpt-oss-20b_failed.txt  outputs_hard_groq_70b.jsonl  outputs_hard_groq_llama4s.jsonl  outputs_hard_llama33-70b.jsonl  outputs_hard_qwen3-32b.jsonl  outputs_llama31_8b.jsonl  outputs_llama4scout_ro.jsonl  outputs_llama70b.jsonl  outputs_llama8b.jsonl  test_out.jsonl
docs/: GMTW_Ro_Technical_Specification.md  abstract.txt  gmtw_ro_paper.tex
examples/: simple_example.py
rombench/: __init__.py
scripts/: check_grammar.py  compare_models.py  compute_delta.py  create_dummy_outputs.py  debug_results.py  evaluate_outputs.py  generate_figure2.py  generate_gmtw_hard.py  generate_gmtw_v0.py  peek_output.py  (+8 more)
(+78 files in other folders)
